CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- Now pass NLSPATH and DYLD_LIBRARY_PATH environment
	  variables, if defined, to CGI and job processes.
	- Removed the pstoraster filter (based on GNU
	  Ghostscript 5.50) and now provide the raster "driver"
	  and patch file necessary to use the current GNU
	  Ghostscript 7.05 release.
	- Removed unnecessary fonts and updated the Courier and
	  Symbol fonts to the latest versions to better support
	  non-ISOLatin1 text.
	- The text filter now always embeds the Courier and
	  Symbol fonts to ensure that they contain the full set
	  of glyphs.
	- The lp and lpr commands now only override the SIGINT
	  handler if it is not being ignored (patch from Robert
	  Ambrose for some interactive software that catches
	  SIGINT and will gracefully cancel the print...)
	- The PostScript image filter (imagetops) now supports
	  printing CMYK images using the CMYK colorspace.
	- The image filters now support CMYK JPEG files, and
	  correctly handles the inverted files from Photoshop
	  (which seems to save RGBW data, not CMYK...)
	- Added a "check" target to the top-level makefile to
	  conform with GNU standards (same as "test").
	- The IPP code didn't always map the POSIX locale "C" to
	  the proper IPP language code.
	- The cupsaddsmb program was updated to use the
	  setdriver command instead of addprinter.
	- Banner pages were not handled properly for implicit
	  classes.
	- When tunneling to a remote system using SSH, the
	  printer URIs for local printers on the remote system
	  did not reflect the correct port number.
	- The Allow, Deny, BrowseAllow, BrowseDeny, and
	  BrowseAddress directives now support the network
	  interface names "@LOCAL" and "@IF(name)" for access
	  control and browsing based on the current interface
	  addresses instead of fixed names or IP addresses.
	- The texttops filter did not properly recognize the